sample/retrieveUnpackaged/objects/Survey_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Apply_for_a_concession__c</fullName>
        <label>Apply for a concession</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrange_direct_debit__c</fullName>
        <label>Arrange direct debit</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CX_mySouthEastWater_Q14__c</fullName>
        <description>Feel free to comment</description>
        <label>CX mySouthEastWater Q14</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys Feedback</relationshipLabel>
        <relationshipName>Surveys_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_for_Recommend_mysoutheastwater__c</fullName>
        <description>Comment about how likely would you be to recommend using the my South Water site to friends or colleagues</description>
        <label>Comment for Recommend_mysoutheastwater</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_for_Satisfied_mysoutheastwater__c</fullName>
        <description>Comment about how satisfied are you with your experience on the &quot;mySouthEastWater&quot; site</description>
        <label>Comment for Satisfied_mysoutheastwater</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys Feedback</relationshipLabel>
        <relationshipName>Surveys_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interested_to_more_research__c</fullName>
        <description>Would you be interested to participate in other customer research in the future</description>
        <label>Interested to more research</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - I&apos;m interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - but only online surveys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No thanks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Move_in_out_of_a_property__c</fullName>
        <label>Move in/out of a property</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_features_for_mysoutheastwater__c</fullName>
        <label>Other features for mysoutheastwater</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_option__c</fullName>
        <description>Option &apos;Other&apos; for how you find out about mySouthEastWater</description>
        <label>Other option</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provide_feedback_for_improvement__c</fullName>
        <description>Please provide any comments, feedback or suggestions for improvement of mySouthEastWater.</description>
        <label>Provide feedback for improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate_Available_Functions__c</fullName>
        <description>How would you rate mySouthEastWater on the following aspects?:</description>
        <label>Rate_Available_Functions</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Ease_of_navigation__c</fullName>
        <description>How would you rate mySouthEastWater on the following aspects?:</description>
        <label>Rate_Ease of navigation</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Look_and_feel_of_the_site__c</fullName>
        <description>How would you rate mySouthEastWater on the following aspects?:</description>
        <label>Rate_Look and feel of the site</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Registration_Process__c</fullName>
        <description>How would you rate mySouthEastWater on the following aspects?:</description>
        <label>Rate_Registration_Process</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Useful_Information__c</fullName>
        <description>How would you rate mySouthEastWater on the following aspects?:</description>
        <label>Rate_Useful_Information</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_value_of_water_sewer_services__c</fullName>
        <description>Finally, a general question about South East Water. How would you rate the value of the water and sewerage services we provide?</description>
        <label>Rate value of water/sewer services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommend_mysoutheastwater__c</fullName>
        <description>How likely would you be to recommend using the my South Water site to friends or colleagues?</description>
        <label>Recommend_mysoutheastwater</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Register_for_paperless_billing__c</fullName>
        <label>Register for paperless billing</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_more_time_to_pay__c</fullName>
        <label>Request more time to pay</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEW_contact_customer__c</fullName>
        <description>Would you like someone from South East Water to contact you about any concerns or outstanding queries you may have?</description>
        <label>SEW contact customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfied_mysoutheastwater__c</fullName>
        <description>Overall , how satisfied are you with your experience on the &quot;mySouthEastWater&quot; site?</description>
        <label>Satisfied_mysoutheastwater</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_up_a_payment_plan__c</fullName>
        <label>Set up a payment plan</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_an_enquiry__c</fullName>
        <label>Submit an enquiry</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_articles_FAQs__c</fullName>
        <label>Support articles/FAQs</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_bill_and_payment_history__c</fullName>
        <label>View bill and payment history</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_manage_your_account_information__c</fullName>
        <label>View/manage your account information</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_manage_your_personal_details__c</fullName>
        <label>View/manage your personal details</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_water_use__c</fullName>
        <label>View water use</label>
        <picklist>
            <picklistValues>
                <fullName>Easy to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know it existed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>find_out_about_mySouthEastWater__c</fullName>
        <label>find out about mySouthEastWater</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey Feedback</label>
    <nameField>
        <label>Survey Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>